# heimwatch

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/heimwatch-collector/: Cargo.toml  TESTING.md  build.rs
crates/heimwatch-collector/src/: error.rs  lib.rs  network.rs
crates/heimwatch-collector/src/network/: linux.rs  macos.rs  mod.rs  windows.rs
crates/heimwatch-collector/tests/: network_integration.rs
crates/heimwatch-core/: Cargo.toml
crates/heimwatch-core/src/: lib.rs  metrics.rs  process.rs
crates/heimwatch-daemon/: Cargo.toml
crates/heimwatch-daemon/src/: lib.rs  logging.rs  main.rs
crates/heimwatch-ebpf/: Cargo.toml  build.rs  rust-toolchain.toml
crates/heimwatch-ebpf-common/: Cargo.toml  build.rs
crates/heimwatch-ebpf-common/src/: lib.rs
crates/heimwatch-ebpf/src/: main.rs
crates/heimwatch-storage/: Cargo.toml
crates/heimwatch-storage/src/: db.rs  error.rs  keys.rs  lib.rs
crates/heimwatch-storage/tests/: integration_test.rs
crates/heimwatch-storage/tests/common/: mod.rs
crates/heimwatch-tui/: Cargo.toml
crates/heimwatch-web/: Cargo.toml
docs/: architecture.md  network-monitoring.md  storage-plan.md
gh-scripts/: heimwatch-issues.sh  heimwatch-labels.sh  heimwatch-milestones.sh  heimwatch-no-root-network.sh
