[package]
name = "heimwatch-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
heimwatch-core = { path = "../heimwatch-core" }
heimwatch-ebpf-common = { path = "../heimwatch-ebpf-common" }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"

[build-dependencies]
aya-build = "0.1"
