[package]
name = "heimwatch-collector"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
heimwatch-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true

# Linux-only dependencies (eBPF network monitoring)
[target.'cfg(target_os = "linux")'.dependencies]
heimwatch-ebpf-common = { path = "../heimwatch-ebpf-common" }
aya.workspace = true
aya-log.workspace = true

[build-dependencies]

[target.'cfg(target_os = "linux")'.build-dependencies]
aya-build.workspace = true
