[package]
name = "heimwatch-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = { version = "0.1" }
aya-log-ebpf = { version = "0.1" }
heimwatch-ebpf-common = { path = "../heimwatch-ebpf-common" }

[[bin]]
name = "heimwatch-ebpf"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
