[package]
name = "heimwatch-storage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
heimwatch-core.workspace = true
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
